@@ -193,6 +193,14 @@
       >AddOutputFilter</directive> directive, <code>NoImplicitAdd</code>
       should be specified so that <module>mod_charset_lite</module>
       doesn't add its filter.</dd>
+
+      <dt><code>ForceAllMimeTypes | NoForceAllMimeTypes</code></dt>
+      <dd>Normally, <module>mod_charset_lite</module> will only perform
+      translation on a small subset of possible mimetypes.  When the
+      <code>ForceAllMimeTypes</code> keyord is specified for a given
+      configuration section, translation is performed without regard for
+      mimetype.</dd>
+
     </dl>
 </usage>
 </directivesynopsis>
